# lattice-fitting

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: FindNTL.cmake
src/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.hpp  LatticeFitter.cpp  LatticeFitter.hpp  LatticeFitterWidget.cpp  LatticeFitterWidget.hpp  LatticeFittingDockWidget.cpp  LatticeFittingDockWidget.hpp  LatticeFittingWindow.cpp  LatticeFittingWindow.hpp  PointDetector.cpp  PointDetector.hpp  PointDetectorWidget.cpp  PointDetectorWidget.hpp  ThresholdWidget.cpp  ThresholdWidget.hpp  functions.cpp  functions.hpp  lattice-fitting.cpp
tests/: CMakeLists.txt  LatticeFitterTest.cpp  functions_test.cpp
